--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,8 @@ KERI colors:
 #62783E
 #B4D070
 #A1C64D
+
+#C18F46
 */
 
 a {
@@ -81,7 +83,12 @@ a:hover {
 }
 
 .hero {
-  background: #62783E;
+  /* background: #62783E; */
+  background-image: linear-gradient(45deg,
+      hsl(185deg 32% 36%) 0%,
+      hsl(136deg 36% 52%) 45%,
+      hsl(78deg 51% 57%) 85%,
+      hsl(77deg 51% 63%) 100%);
 }
 
 .hero__image {
