--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,13 +83,13 @@ a:hover {
 }
 
 .hero {
-  /* background: #62783E; */
-  background-image: linear-gradient(45deg,
+  background: #62783E;
+  /* background-image: linear-gradient(45deg,
       hsl(185deg 32% 36%) 0%,
       hsl(119deg 35% 56%) 18%,
       hsl(78deg 51% 58%) 37%,
       hsl(63deg 43% 56%) 61%,
-      hsl(36deg 50% 52%) 100%);
+      hsl(36deg 50% 52%) 100%); */
 }
 
 .hero__image {
